Use #Rulesbox Color as inherit in order to avoid problems with Dark Mode.

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -145,7 +145,7 @@ ul.timeline {
   max-width: 900px;
   width: 90%;
   border: 1px solid #2980b9;
-  color: rgb(102, 124, 153);
+  color: inherit;
   border-width: 2px 0px;
   border-image: initial;
   background: #ffefcc;
